# comma

./: .gitignore  .replit  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: dependencies-update.yaml  main.yml
comma/: __init__.py  abstract.py  config.py  exceptions.py  extras.py  helpers.py  methods.py  typing.py
comma/classes/: __init__.py  file.py  row.py  slices.py  table.py
docs/source/: comma.classes.rst  comma.rst  conf.py  index.rst  modules.rst
tests/: test_abstract.py  test_comma.py  test_config.py  test_data.py  test_extras.py  test_helpers.py  test_imports.py  test_methods.py
tests/classes/: test_file.py  test_misc.py  test_row.py  test_slices.py  test_table.py
tests/helpers/: map_getter.py
