[tool.poetry]
name = "comma"
version = "0.5.1"
description = "Python CSV, and delimiter-spaced files, for humans!"
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/jlumbroso/comma"
repository = "https://github.com/jlumbroso/comma"
include = [
    "README.md",
]
keywords = [
    "CSV",
    "CSV library",
    "CSV reading",
    "DSV library",
    "CSV manipulation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = {version = "^2.23.0", optional = true}
chardet = {version = "^3.0.4", optional = true}
binaryornot = {version = "^0.4.4", optional = true}
clevercsv = {version = "^0.6.3", optional = true}

[tool.poetry.dev-dependencies]
ipykernel = "^5.2.1"
pytest = "^5.2"
pytest-cov = "^2.9.0"
codecov = "^2.1.7"
pytest-mock = "^3.1.1"
requests-mock = "^1.8.0"
pytest-subtests = "^0.3.1"
pytest-repeat = "^0.8.0"
extradict = "^0.4.0"
sphinx = "^3.1.2"
sphinx-autodoc-typehints = "^1.11.0"
sphinx-rtd-theme = "^0.5.0"
doc8 = "^0.8.1"
tox = "^3.17.1"

[tool.poetry.extras]
autodetect = ["binaryornot", "clevercsv", "chardet"]
net = ["requests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
