[tool.poetry]
name = "comma"
version = "0.5.3"
description = "Python CSV, and delimiter-spaced files, for humans!"
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/jlumbroso/comma"
repository = "https://github.com/jlumbroso/comma"
include = [
    "README.md",
]
keywords = [
    "CSV",
    "CSV library",
    "CSV reading",
    "DSV library",
    "CSV manipulation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = {version = "^2.23.0", optional = true}
chardet = {version = "^3.0.4", optional = true}
binaryornot = {version = "^0.4.4", optional = true}
clevercsv = {version = "^0.6.3", optional = true, python = "^3.6"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.9.0"
codecov = "^2.1.7"
pytest-mock = "^3.1.1"
requests-mock = "^1.8.0"
pytest-subtests = "^0.3.1"
pytest-repeat = "^0.8.0"
extradict = {version = "^0.4.0", optional = true, python = "^3.6"}
sphinx = "^3.1.2"
sphinx-autodoc-typehints = {version = "^1.11.0", python = "^3.6"}
sphinx-rtd-theme = "^0.5.0"
doc8 = {version = "^0.8.1", optional = true}
tox = "^3.17.1"

[tool.poetry.extras]
autodetect = ["binaryornot", "clevercsv", "chardet"]
net = ["requests"]
#test = ["pytest", "pytest-mock", "requests-mock", "pytest-subtests", "pytest-repeat", "tox"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
