[tool.poetry]
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: General",
]
description = "Python CSV, and delimiter-spaced files, for humans!"
homepage = "https://github.com/jlumbroso/comma"
include = [
  "README.md",
]
keywords = [
  "CSV",
  "CSV library",
  "CSV reading",
  "DSV library",
  "CSV manipulation",
]
license = "LGPL-3.0-or-later"
name = "comma"
readme = "README.md"
repository = "https://github.com/jlumbroso/comma"
version = "0.5.4"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{36,37,38,39}

[testenv]
requires =
    tox-poetry-dev-dependencies
poetry_add_dev_dependencies = True
commands =
    pytest
"""

[tool.poetry.dependencies]
binaryornot = {version = "^0.4.4", optional = true}
chardet = {version = "^3.0.4", optional = true}
clevercsv = {version = "^0.6.3", optional = true, python = "^3.6"}
python = "^3.6"
requests = {version = "^2.23.0", optional = true}

[tool.poetry.dev-dependencies]
codecov = "^2.1.7"
doc8 = {version = "^0.8.1", optional = true}
extradict = {version = "^0.4.0", optional = true, python = "^3.6"}
pytest = "^5.2"
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.1"
pytest-repeat = "^0.8.0"
pytest-subtests = "^0.3.1"
requests-mock = "^1.8.0"
sphinx = "^3.1.2"
sphinx-autodoc-typehints = {version = "^1.11.0", python = "^3.6"}
sphinx-rtd-theme = "^0.5.0"
tox = "^3.17.1"
tox-poetry-dev-dependencies = "^0.0.5"

# dependabot dependency pins (vulnerability warnings)
babel = "^2.10.1"
jinja2 = "^3.0.3"
py = "^1.11.0"
pygments = "^2.12.0"
urllib3 = "^1.26.9"

[tool.poetry.extras]
autodetect = ["binaryornot", "clevercsv", "chardet"]
net = ["requests"]
#test = ["pytest", "pytest-mock", "requests-mock", "pytest-subtests", "pytest-repeat", "tox"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
